adapter/internal/operator/gateway-api/testdata/backendtrafficpolicy-override-replace.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - apk.wso2.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/foo"
      backendRefs:
      - name: service-1
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    hostnames:
    - apk.wso2.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/bar"
      backendRefs:
      - name: service-1
        port: 8080
backendTrafficPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
    loadBalancer:
      type: Random
    timeout:
      tcp:
        connectTimeout: 20s
      http:
        connectionIdleTimeout: 21s
        maxConnectionDuration: 22s
- apiVersion: apk.wso2.com/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-route-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: default
    loadBalancer:
      type: ConsistentHash
      consistentHash:
        type: SourceIP
